minor fix to parent pom to make project compile on java 9 (enforcer plugin failed)